--- a/src/app/lists/lists.component.css
+++ b/src/app/lists/lists.component.css
@@ -1,12 +1,180 @@
 section.lists {
-  display: flex;
-  flex-flow: row;
-  flex-wrap: wrap;
+  display:block;
+
 }
 
 app-todo-list {
   flex: 0 0 auto;
-  display: inline-flex;
+  display: block;
   border: solid black 1px;
-  margin: 1em;
+  border-radius: 0.5em;
+  padding-top: 10px;
+  padding-left: 10px;
+  margin-right: 10%;
+  margin-left: 10%;
+  margin-bottom: 10%;
 }
+
+section.listsOfLists{
+  border: 2px solid black;
+  clear: both;
+  margin:5%;
+  position: relative;
+  border-radius: 0.5em;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+span.titre{
+  font-size: 200%;
+  padding: 5px;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  border-bottom-right-radius: 0.5em;
+  }
+input{
+  margin-bottom:10px;
+}
+
+#addBtn{
+  width:50px;
+}
+
+#addArea{
+  text-align: center;
+}
+
+div#title{
+  margin-left:5%;
+  margin-top:5%;
+  margin-right: 5%;
+  text-align: center;
+  font-size: 300%;
+  font-weight: bold;
+}
+input#setTitle{
+  margin-left:560px;
+  margin-top:30px;
+
+}
+input#setDescription{
+  margin-left:560px;
+  margin-top:50px;
+
+}
+div#description{
+  margin-bot:3%;
+  margin-left:3%;
+  margin-right: 3%;
+  text-align:center;
+  font-size:200%;
+  font-weight: bold;
+  color:#bfbfbf;
+}
+
+#listPanel{
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+label{
+  font-size: 150%;
+  font-weight: bold;
+}
+
+.panel-header button{
+  margin-right: 10px;
+}
+
+.hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    transition-duration: 0.3s;
+    transition-property: transform;
+}
+
+.hvr-grow:hover,
+.hvr-grow:focus,
+.hvr-grow:active {
+    transform: scale(1.1);
+}
+.btn-default {
+    display: inline-block;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    transition-duration: 0.3s;
+    transition-property: transform;
+}
+
+.btn-default:hover,
+.btn-default:focus,
+.btn-default:active {
+    transform: scale(1.1);
+}
+
+.btn-default1{
+    display: inline-block;
+	border-radius: 4px;
+	background-color: #4CAF50;
+    border: 1px solid black;
+    color: white;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    width: 80px;
+	padding: 0px;
+	box-sizing: border-box;
+}
+
+.btn-default1:hover{
+ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.btnClose{
+	display: inline-block;
+	border-radius: 4px;
+	background-color: #FFA500;
+    border: 1px solid black;
+    color: white;
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+    width: 80px;
+	padding: 0px;
+	box-sizing: border-box;
+}
+.btnClose:hover{
+ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.panel-default {
+  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.panel-default:hover {
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
+
+
+.lab_Ajout
+{
+	display:block;
+	width: 190px;
+	float: left;
+
+}
+
+#listChecked{
+  margin-right:10px;
+}
+
+
+
