--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,15 +1,112 @@
-<p>There are {{getLists().length}} lists</p>
-<section>
-  <form (ngSubmit)="createList(newListName.value); newListName.value=''">
-    <label>Create a new list:</label>
-    <input type="text" #newListName/>
-  </form>
+
+<script src="lists.component.ts"></script>
+
+<div *ngIf="IsDisplayingTitle()" (dblclick)="changeDisplayTitle()" id="title">{{getCurrentListName()}}</div>
+<form (ngSubmit)="modifyList(titleInput.value, '', getCurrentList()); changeDisplayTitle()" *ngIf="!IsDisplayingTitle()">
+  <input type="text" id="setTitle" class="panel settings" #titleInput autofocus>
+</form>
+
+
+<div *ngIf="IsDisplayingDescription()" (dblclick)="changeDisplayDescription()" id="description">{{getCurrentListDescription()}}</div>
+<form (ngSubmit)="setDescription(descriptionInput.value); changeDisplayDescription()" *ngIf="!IsDisplayingDescription()">
+  <input type="text" id="setDescription" (blur)="changeDisplayDescription()" class="panel settings" #descriptionInput autofocus>
+</form>
+
+
+
+
+<section *ngIf="shouldAllListsBeDisplayed();" class="listsOfLists" >
+  <span class="titre">
+    Mes Listes
+  </span>
+
+
+  <button *ngIf="isDisplaying.isDisplayingDeleteButton" class="btn btn-warning pull-right" (click)="deleteMultipleLists()">Supprimer Listes Cochées</button>
+
+  <section class="lists">
+    <!-- <app-todo-list *ngFor="let list of getLists()" [list]="list" [clock]="list.clock"></app-todo-list> -->
+
+
+    <section *ngFor="let list of getLists()">
+      <div id="listPanel" class="panel panel-default" (dblclick)="setCurrentListFromId(list.id)">
+        <div class="panel-heading">
+
+          <label>{{list.name}}</label>
+          <button class="pull-right btn btn-default" title="Afficher Liste" (click)="setCurrentListFromId(list.id)"><span class="glyphicon glyphicon-arrow-right" ></span></button>
+          <button class="pull-right btn btn-default" title="Supprimer Liste" (click)="delete(list)"><span class="	glyphicon glyphicon-remove"></span></button>
+          <button class="pull-right btn btn-default" title="Modifier Liste"  (click)="setListToModify(list)" data-toggle="modal" data-target="#addModal"><span class="glyphicon glyphicon-pencil"></span></button>
+          <button class="pull-right btn btn-default" title="Dupliquer Liste" (click)="duplicate(list)"><span class="	glyphicon glyphicon-copy"></span></button>
+          <input id="listChecked" #isChecked class="pull-right" type="checkbox" [ngModel]="list.data.checked" (ngModelChange)="check(list, isChecked.checked)"/>
+
+        </div>
+        <div *ngIf="listDescriptionIsNotEmpty(list)" class="panel-body">
+          {{list.data.description}}
+        </div>
+      </div>
+    </section>
+  </section>
+
+  <div id="addArea">
+
+    <input id="addBtn" title="Ajouter Liste" type="image" src="https://www.shareicon.net/data/128x128/2017/05/09/885759_add_512x512.png" (click)="setListToModify()" class="hvr-grow" data-toggle="modal" data-target="#addModal">
+<!--
+     <div *ngIf="getAddClick()">
+
+      <form (ngSubmit)="createList(newListName.value); newListName.value=''">
+        <label>Créez votre liste :</label>
+        <input type="text" #newListName/>
+      </form>
+    </div> -->
+
+
+    <div class="modal fade" id="addModal" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 *ngIf="getListToModify()=== undefined" class="modal-title">Ajouter une Liste</h4>
+            <h4 *ngIf="getListToModify()!==undefined" class="modal-title">Modifier la Liste</h4>
+          </div>
+          <div class="modal-body">
+
+            <form class="form-horizontal">
+              <div class="form-group">
+                <label class="col-xs-5">Nom de la liste : </label>
+                <input type="text" class="col-xs-push-2 col-xs-4" #newListName placeholder="{{getListToModify() == undefined ? '' : getListToModify().name}}">
+              </div>
+              <div class="form-group">
+                <label class="col-xs-5">Description :</label>
+                <input type="text" class="col-xs-push-2 col-xs-4" #newListDescription placeholder="{{getListToModify()== undefined ? '' : getListToModify().data.description}}">
+              </div>
+            </form>
+              <!-- <label class="lab_Ajout">Nom de la liste : </label>
+              <input type="text" #newListName placeholder="{{getListToModify() == undefined ? '' : getListToModify().name}}"> <br/>
+              <label class="lab_Ajout">Description :</label>
+              <input type="text" #newListDescription placeholder="{{getListToModify()== undefined ? '' : getListToModify().data.description}}">
+              -->
+
+          </div>
+          <div class="modal-footer">
+
+			<input *ngIf="getListToModify()===undefined" class="btn-default1" type="submit" value="Envoyer" (click)="createList(newListName.value, newListDescription.value); newListName.value=''; newListDescription.value=''" data-dismiss="modal">
+            <input *ngIf="getListToModify()!==undefined" class="btn-default1" type="submit" value="Envoyer" (click)="modifyList(newListName.value, newListDescription.value); newListName.value=''; newListDescription.value=''" data-dismiss="modal">
+			<button type="button" class="btn btnClose" data-dismiss="modal">Annuler</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+  </div>
+
 </section>
 
-<!--
-<p>getItemsUI: {{getItemsUI() | json}}</p>
-<p>getLists: {{getLists() | json}}</p>
--->
-<section class="lists">
-  <app-todo-list *ngFor="let list of getLists()" [list]="list" [clock]="list.clock"></app-todo-list>
+
+
+<section *ngIf="!shouldAllListsBeDisplayed()">
+
+  <button class="btn btn-secondary" (click)="setCurrentListFromId(); changeDisplayTitle(true); changeDisplayDescription(true);" style="margin:10px;"><span class="glyphicon glyphicon-arrow-left"></span></button>
+
+  <app-todo-list [list]="getCurrentList()" [clock]="getCurrentList().clock"></app-todo-list>
 </section>
