--- a/src/app/todo-item/todo-item.component.css
+++ b/src/app/todo-item/todo-item.component.css
@@ -5,3 +5,101 @@ section.toBeUpdated {
 form {
   display: inline;
 }
+
+section {
+  margin: 5%;
+  width:1000px;
+}
+
+#editImg{
+  width:15px;
+}
+
+#deleteImg{
+  width:15px;
+}
+
+.panel{
+  margin: 20px;
+}
+
+.panel-heading{
+  font-size:150%;
+  font-weight: bold;
+}
+
+/*
+.btn-default {
+    display: inline-block;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    backface-visibility: hidden;
+    transition-duration: 0.3s;
+    transition-property: transform;
+}
+
+.btn-default:hover,
+.btn-default:focus,
+.btn-default:active {
+    transform: scale(1.1);
+}*/
+.panel-default {
+  width: 80%;
+  height:100px;
+  padding: 10px;
+  margin: 149px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.panel-default:hover {
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
+
+.btn_col{
+  width: 30px;
+  height:30px;
+  float: left;
+  margin: 4px 2px;
+  padding: 19px;
+  border: 1px solid gray;
+  border-radius: 50%;
+}
+
+.btn_col.vert{
+  background-color:#4CAF50;
+}
+.btn_col.vert:active {
+  background-color: #4CAF55;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.btn_col.rouge{
+  background-color:#FF0000;
+}
+.btn_col.rouge:active{
+  background-color: #ff0008;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.btn_col.orange{
+  background-color:#FFA500;
+}
+.btn_col.orange:active{
+  background-color: #FFA508;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.btn_col:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.compteRebours {
+    font-size: 0.8em;
+}
+
+.btn-group{
+  margin-top: 10px;
+}
