--- a/src/app/todo-list/todo-list.component.css
+++ b/src/app/todo-list/todo-list.component.css
@@ -1,15 +1,81 @@
-:host {
-  padding: 0em;
-  display: flex;
-  flex-flow: column;
+
+.root{
+  margin:10px;
 }
 
-:host > section.root {
-  flex: 1 1;
-  margin: 0;
-  padding: 0.25em;
+
+#technicolor{
+  vertical-align:top;
+  margin:0.5em;
 }
 
-h3 {
-  margin-top: 0;
+section.items{
+  vertical-align:top;
+  width:inherit;
+}
+
+
+li{
+  display: block;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+.form_n{
+  text-align: center;
+}
+
+.navbar-default{
+	width: 1010px;
+	
+}
+
+/********* Redéfinition des Boutons */
+.btn {
+  display: inline-block;
+  border-radius: 4px;
+  color: white;
+  padding: 10px 15px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  width: 120px;
+  height: 40px;
+}
+
+.btn-default{
+  background-color: #4CAF50;
+  border: 1px solid green;
+
+}
+
+.btn-warning{
+  width: 230px;
+}
+
+.btn:hover{
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+/*
+.formu{
+ max-width: 500px;
+    margin: auto;
+}*/
+
+.trier{
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #6699ff;
+  border: 1px solid black;
+  color: white;
+  padding: 5px 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+  width: 60px;
+  height: 40px;
+}
+.trier:hover{
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
